Added post update-create component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,9 @@
 <div class="container">
-  <app-blog-header></app-blog-header>
-  <app-post-list></app-post-list>
+  <div class="row">
+    <app-blog-header></app-blog-header>
+    <app-post-list></app-post-list>
+  </div>
+  <div class="row">
+    <app-post-update></app-post-update>
+  </div>
 </div>
