Refactored to use single component for create and update operaitons

--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -11,5 +11,7 @@
   </div>
   <div class="col-xs-8">
     <app-post-detail [currentPost]="currentPost"></app-post-detail>
+    
+    <app-post-update [post]="currentPost"></app-post-update>
   </div>
 </div>
